fixed gap

--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ display: flex;
   margin: 0 auto;
 }
 .project-title{
-  padding:3.6rem 9.6rem 3.6rem 6.4rem;
+  padding:3.2rem 9.6rem 3.2rem 6.4rem;
   font-weight: 400;
   font-size: 2.4rem;
   line-height: 3.0rem;
@@ -280,7 +280,7 @@ display: flex;
   font-weight: 300;
   font-size: 1.8rem;
   line-height: 2.5rem;
-  margin-bottom: 4.8rem;
+  margin-bottom: 6.4rem;
 }
 .img-container{
   display: flex;
